Big refactoring of classes and entity, added enquiry dao and added javadocs on serializers